# neo-reckoning

./: .gitignore  .oxfmtrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  jest.config.js  package.json  turbo.json
.changeset/: README.md  famous-bars-greet.md  fresh-dates-wait.md  great-flowers-listen.md  month-timeline-view.md  neat-seas-fix.md  rrule-namespace-import.md  sour-hoops-accept.md
.github/workflows/: changeset-check.yml  ci-js.yml  ci-rust.yml  ci.yml  parity.yml  publish.yml
conformance/fixtures/conflicts/: basic_overlap.json  exact_boundary.json  multi_day_window.json  point_in_time_excluded.json  same_range_id.json
conformance/fixtures/day_selector/: explicit_dates.json  range_bounded.json  range_open_ended.json  recurrence_and_semantics.json  recurrence_date_of_month.json  recurrence_month_only.json  recurrence_weekday.json
conformance/fixtures/exclusions/: except_between.json  except_between_month_boundary.json  except_dates.json
conformance/fixtures/free_slots/: day_empty.json  day_full.json  gap_after_dayend.json  gap_before_daystart.json  merge_overlapping.json  min_duration_exact.json  min_duration_short.json
crates/daywatch-cal/: Cargo.toml
crates/daywatch-cal/src/: evaluator.rs  lib.rs  scoring.rs  time.rs  types.rs
crates/daywatch-cal/tests/: conformance.rs
examples/preact/: DatePicker.tsx  RangePicker.tsx  TimePicker.tsx
examples/react/: DatePicker.tsx  RangePicker.tsx  TimePicker.tsx
examples/sandbox/: index.html
examples/solid/: DatePicker.tsx  RangePicker.tsx  TimePicker.tsx
scripts/: set-latest.sh
(+19 files in other folders)
