[package]
name = "daywatch-cal"
version = "0.1.0"
edition = "2021"
description = "Scheduling intelligence for daywatch — RangeEvaluator, conflict detection, free-slot finding"
repository = "https://github.com/sdougbrown/daywatch-cal"
license = "MIT"
keywords = ["calendar", "scheduling", "daywatch"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
